--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -21,104 +21,20 @@
 }}
 <div class="d-flex flex-row">
     <div class="p-2" id="toolbar">
-        <div class="circle" title="{{# str}} btn:circle, mod_gcanvas {{/ str}}">
+        <div class="btn btn-default icon" data-element-type="Circle" title="{{# str}} btn:circle, mod_gcanvas {{/ str}}">
             <i class="fa fa-circle"></i>
+        </div>
+        <div class="btn btn-default icon" data-element-type="Rect" title="{{# str}} btn:rect, mod_gcanvas {{/ str}}">
+            <i class="fa fa-square"></i>
+        </div>
+        <div class="btn btn-default icon" data-element-type="Triangle" title="{{# str}} btn:triangle, mod_gcanvas {{/ str}}">
+            <i class="fa fa-caret-up"></i>
         </div>
     </div>
     <div class="p-0">
+        <div class="teacher-toolbar">
+
+        </div>
         <canvas id="sketch" height="500" style="border:1px solid #aaa"></canvas>
     </div>
 </div>
-<script>
-        {{#js}}
-        require(['jquery'], function ($) {
-            jQuery(document).ready(function ($) {
-
-                var canvas = this.__canvas = new fabric.Canvas('sketch');
-                canvas.setHeight(500);
-                canvas.setWidth(800);
-
-                canvas.on('mouse:over', function(e) {
-                    e.target.set('fill', 'red');
-                    canvas.renderAll();
-                });
-
-                canvas.on('mouse:out', function(e) {
-                    e.target.set('fill', 'green');
-                    canvas.renderAll();
-                });
-
-                fabric.Object.prototype.transparentCorners = false;
-
-                var rect1 = new fabric.Rect();
-
-                var rect2 = new fabric.Rect({
-                    width : 100,
-                    height: 100,
-                    left  : 350,
-                    top   : 250,
-                    angle : -10,
-                    fill  : 'rgba(0,200,0,0.5)'
-                });
-
-                var rect3 = new fabric.Rect({
-                    width      : 50,
-                    height     : 100,
-                    left       : 275,
-                    top        : 350,
-                    angle      : 45,
-                    stroke     : '#eee',
-                    strokeWidth: 10,
-                    fill       : 'rgba(0,0,200,0.5)'
-                });
-
-                var circle = new fabric.Circle({
-                    radius: 50,
-                    left  : 275,
-                    top   : 75,
-                    fill  : '#aac'
-                });
-
-                var triangle = new fabric.Triangle({
-                    width : 100,
-                    height: 100,
-                    left  : 50,
-                    top   : 300,
-                    fill  : '#cca'
-                });
-
-                canvas.add(rect1, rect2, rect3, circle, triangle);
-                canvas.on({
-                    'object:moving'  : onChange,
-                    'object:scaling' : onChange,
-                    'object:rotating': onChange,
-                });
-
-                function onChange(options) {
-                    options.target.setCoords();
-                    canvas.forEachObject(function (obj) {
-                        if (obj === options.target) {
-                            return;
-                        }
-                        obj.set('opacity', options.target.intersectsWithObject(obj) ? 0.5 : 1);
-                    });
-                }
-
-                $('#toolbar .circle').click(function () {
-                    var circle = new fabric.Circle({
-                        radius: 50,
-                        left  : 275,
-                        top   : 50,
-                        fill  : '#aac'
-                    });
-
-                    console.log('Add circle');
-                    canvas.discardActiveObject();
-                    canvas.add(circle);
-                    canvas.setActiveObject(circle);
-                    canvas.requestRenderAll();
-                });
-            });
-        });
-        {{/js}}
-</script>
