--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -33,6 +33,10 @@
         <div class="btn icon" data-element-type="Arrow" title="{{# str}} btn:arrow, mod_gcanvas {{/ str}}">
             <i class="fa fa-caret-left"></i>
         </div>
+
+        <div class="btn icon" data-element-type="Trash" title="{{# str}} btn:trash, mod_gcanvas {{/ str}}">
+            <i class="fa fa-trash"></i>
+        </div>
     </div>
     <div class="p-0">
         <div class="teacher-toolbar">
