--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -29,6 +29,7 @@
         <div class="p-2">
             <span>Change background</span>
             <span>Add toolbar symbols</span>
+            <span>Add legenda description</span>
         </div>
     </div>
 {{/is_teacher}}
@@ -49,6 +50,9 @@
         </div>
         <div class="item icon" id="add-image" title="{{# str}} btn:image, mod_gcanvas {{/ str}}">
             <i class="fa fa-image" aria-hidden="true"></i>
+        </div>
+        <div class="item icon" id="smiley" title="{{# str}} btn:smiley, mod_gcanvas {{/ str}}">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
         </div>
         <div class="item icon" id="trash" title="{{# str}} btn:trash, mod_gcanvas {{/ str}}">
             <i class="fa fa-trash-o" aria-hidden="true"></i>
