--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #page-mod-gcanvas-view #toolbar .item {
-    width:100%;
-    height:40px;
+    width: 100%;
+    height: 40px;
     line-height: 40px;
     vertical-align: middle;
     margin-bottom: 5px;
@@ -9,11 +9,11 @@
     cursor: pointer;
 }
 
-#page-mod-gcanvas-view canvas{
+#page-mod-gcanvas-view canvas {
     border: none;
 }
 
-#page-mod-gcanvas-view #teacher-toolbar{
+#page-mod-gcanvas-view #teacher-toolbar {
     background: #464646;
     min-height: 40px;
     color: #fff;
@@ -21,7 +21,7 @@
     width: 870px;
 }
 
-#page-mod-gcanvas-view #bottom-toolbar{
+#page-mod-gcanvas-view #bottom-toolbar {
     background: #343434;
     min-height: 40px;
     color: #fff;
@@ -29,27 +29,45 @@
     width: 870px;
 }
 
-#page-mod-gcanvas-view #bottom-toolbar span , #page-mod-gcanvas-view #teacher-toolbar span{
+#page-mod-gcanvas-view #bottom-toolbar span, #page-mod-gcanvas-view #teacher-toolbar span {
     cursor: pointer;
     margin: 5px;
     background: #1177d1;
     padding: 5px;
 }
 
-#canvas-wrapper{
+#canvas-wrapper {
     background: #fff;
 }
 
-#sketch-tool{
+#sketch-tool {
     margin: 0 auto;
     width: 870px;
 }
 
-#sketch-tool-bg{
+#sketch-tool-bg {
     background: #464646;
     padding: 20px 0;
     border: 1px solid #000;
 }
+
+#emoji-picker {
+    position: absolute;
+    width: 300px;
+    height: 200px;
+    overflow-x: hidden;
+    background: #f5f5f5;
+    overflow-y: scroll;
+    margin: -50px 0 0 62px;
+    display: none;
+    z-index: 999;
+    padding: 10px;
+}
+
+#emoji-picker img {
+    cursor: pointer;
+}
+
 
 #page-mod-gcanvas-view #toolbar i {
     color: #fff;
@@ -63,8 +81,8 @@
     border-right: none;
 }
 
-.card-img-top{
+.card-img-top {
     max-height: 50em;
-    border-bottom: 1px solid #DFDFDF;
+    border-bottom: 1px solid #dfdfdf;
     padding: 10px;
 }
