--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -55,9 +55,7 @@
                 </div>
                 <div class="item icon" id="smiley" title="{{# str}} btn:smiley, mod_gcanvas {{/ str}}">
                     <i class="fa fa-smile-o" aria-hidden="true"></i>
-                    <div id="emoji-picker">
-                        <!--Loaded with a ajax call -->
-                    </div>
+                    <div id="emoji-picker"></div>
                 </div>
                 <div class="item icon" id="trash" title="{{# str}} btn:trash, mod_gcanvas {{/ str}}">
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
@@ -85,7 +83,7 @@
                 </span>
             </div>
             <div class="p-2">
-                Legenda @todo
+
             </div>
         </div>
     </div>
