--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
     min-height: 40px;
     color: #fff;
     padding: 5px 60px;
-    width: 870px;
+    width: 866px;
 }
 
 #page-mod-gcanvas-view #bottom-toolbar {
@@ -26,7 +26,7 @@
     min-height: 40px;
     color: #fff;
     padding: 5px 60px;
-    width: 870px;
+    width: 866px;
 }
 
 #page-mod-gcanvas-view #bottom-toolbar span, #page-mod-gcanvas-view #teacher-toolbar span {
@@ -42,7 +42,7 @@
 
 #sketch-tool {
     margin: 0 auto;
-    width: 870px;
+    width: 868px;
 }
 
 #sketch-tool-bg {
@@ -68,6 +68,9 @@
     cursor: pointer;
 }
 
+div#sketch-tool {
+    border: 1px solid #343434;
+}
 
 #page-mod-gcanvas-view #toolbar i {
     color: #fff;
@@ -85,4 +88,38 @@
     max-height: 50em;
     border-bottom: 1px solid #dfdfdf;
     padding: 10px;
+}
+
+.dialog {
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.73);
+    z-index: 999;
+    display: none;
+}
+
+.dialog .col-md-3 {
+    display: none;
+}
+
+.dialog .col-md-9 {
+    width: 100%;
+    max-width: 100%;
+    flex: 100%;
+}
+
+.dialog form {
+    left: 50%;
+    top: 100px;
+    position: fixed;
+    margin-left: -310px;
+    width: 600px;
+    height: 400px;
+    background: #fff;
+    z-index: 9999;
+    padding: 20px;
+    border: 1px solid #000;
 }
