--- a/templates/canvas_attempts.mustache
+++ b/templates/canvas_attempts.mustache
@@ -27,14 +27,19 @@
                     <img class="card-img-top img-fluid" src="{{src}}" alt="">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">{{added_on}}
-                    </h5>
-                    <a href="{{src}}" target="_blank" class="btn btn-success pull-right">
+                    <h5 class="card-title">{{added_on}}</h5>
+                    <span data-id="{{id}}" class="delete btn btn-danger pull-right"
+                       title="{{# str}} btn:remove, mod_gcanvas {{/ str}}">
+                        <i class="fa fa-remove" aria-hidden="true"></i>
+                    </span>
+                    <a href="{{src}}" class="btn btn-success pull-right"
+                       title="{{# str}} btn:download, mod_gcanvas {{/ str}}">
                         <i class="fa fa-download" aria-hidden="true"></i>
                     </a>
-                    <a href="#" data-id="{{id}}" target="_blank" class="restore btn btn-default pull-right">
+                    <span data-id="{{id}}" class="restore btn btn-default pull-right"
+                       title="{{# str}} btn:restore, mod_gcanvas {{/ str}}">
                         <i class="fa fa-refresh" aria-hidden="true"></i>
-                    </a>
+                    </span>
                 </div>
             </div>
         </div>
