--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,13 @@
     width: 866px;
 }
 
-#page-mod-gcanvas-view #bottom-toolbar span, #page-mod-gcanvas-view #teacher-toolbar span {
+#page-mod-gcanvas-view #bottom-toolbar span, #page-mod-gcanvas-view #teacher-toolbar span,
+#page-mod-gcanvas-view #teacher-toolbar a {
     cursor: pointer;
     margin: 5px;
     background: #1177d1;
     padding: 5px;
+    color:#fff;
 }
 
 #canvas-wrapper {
