--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -81,9 +81,9 @@
                 </span>
             </div>
             <div class="p-2">
-                 <span id="show-samples">
+                 <span id="show-help">
                     <i class="fa fa-question" aria-hidden="true"></i>
-                     {{# str}} btn:samples, mod_gcanvas {{/ str}}
+                     {{# str}} btn:help, mod_gcanvas {{/ str}}
                 </span>
             </div>
             <div class="p-2">
@@ -99,3 +99,4 @@
     <!-- Will be loaded with a AJAX call -->
 </div>
 <div id="dialog-holder"></div>
+<div id="dialog-help" class="dialog"><div class="help-content">{{{helptext}}}</div></div>
