Add selecting toolbar files

--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -55,6 +55,7 @@
                 </div>
                 <div class="item icon" id="select-a-image" title="{{# str}} btn:select_a_image, mod_gcanvas {{/ str}}">
                     <i class="fa fa-image" aria-hidden="true"></i>
+                    <div id="image-picker"></div>
                 </div>
                 <div class="item icon" id="smiley" title="{{# str}} btn:smiley, mod_gcanvas {{/ str}}">
                     <i class="fa fa-smile-o" aria-hidden="true"></i>
@@ -98,5 +99,4 @@
 <div class="d-flex flex-row" id="history">
     <!-- Will be loaded with a AJAX call -->
 </div>
-<div id="dialog-holder"></div>
 <div id="dialog-help" class="dialog"><div class="help-content">{{{helptext}}}</div></div>
