--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
     margin: 5px;
     background: #1177d1;
     padding: 5px;
-    color:#fff;
+    color: #fff;
 }
 
 #canvas-wrapper {
@@ -51,6 +51,28 @@
     /*background: #464646;*/
     padding: 20px 0;
     /*border: 1px solid #000;*/
+}
+
+#image-picker {
+    position: absolute;
+    width: 150px;
+    height: 200px;
+    overflow-x: hidden;
+    background: #f5f5f5;
+    overflow-y: scroll;
+    margin: -50px 0 0 62px;
+    display: none;
+    z-index: 999;
+    padding: 10px;
+}
+
+#image-picker img {
+    cursor: pointer;
+    max-height: 90px;
+}
+
+#image-picker li{
+    margin-bottom: 5px;
 }
 
 #emoji-picker {
@@ -113,7 +135,7 @@ div#sketch-tool {
     flex: 100%;
 }
 
-.dialog form{
+.dialog form {
     left: 50%;
     top: 100px;
     position: fixed;
@@ -126,7 +148,7 @@ div#sketch-tool {
     border: 1px solid #000;
 }
 
-.dialog .help-content{
+.dialog .help-content {
     left: 50%;
     top: 100px;
     position: fixed;
