Update backup / restore process

--- a/templates/canvas_attempts.mustache
+++ b/templates/canvas_attempts.mustache
@@ -16,7 +16,7 @@
 }}
 {{!
     @package moodle-mod_gcanvas
-    @copyright 17-10-2018 MoodleFreak.nl
+    @copyright 17-10-2018 MFreak.nl
     @author    Luuk Verhoeven
 }}
 <div class="container card-deck mt-4">
