--- a/templates/canvas_uploader.mustache
+++ b/templates/canvas_uploader.mustache
@@ -16,7 +16,7 @@
 }}
 {{!
     @package moodle-mod_gcanvas
-    @copyright 18-10-2018 MoodleFreak.nl
+    @copyright 18-10-2018 MFreak.nl
     @author    Luuk Verhoeven
 }}
 <div id="canvas-filepicker-form-{{filearea}}" class="dialog">
