Update canvas add textbox

--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -38,6 +38,9 @@
         <div class="d-flex flex-row" id="canvas-wrapper">
             <!-- Left toolbar -->
             <div class="p-2" id="toolbar">
+                <div class="item icon" data-element-type="Textbox" title="{{# str}} btn:text, mod_gcanvas {{/ str}}">
+                    <i class="fa fa-font"></i>
+                </div>
                 <div class="item icon" data-element-type="Circle" title="{{# str}} btn:circle, mod_gcanvas {{/ str}}">
                     <i class="fa fa-circle"></i>
                 </div>
