Update: prevent context menu on canvas and images.master Update: language Update: upload image

--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -54,7 +54,7 @@
                     <i class="fa fa-caret-left"></i>
                 </div>
                 <div class="item icon" id="add-image" title="{{# str}} btn:image, mod_gcanvas {{/ str}}">
-                    <i class="fa fa-file-image-o" aria-hidden="true"></i>
+                    <i class="fa fa-upload" aria-hidden="true"></i>
                 </div>
                 <div class="item icon" id="select-a-image" title="{{# str}} btn:select_a_image, mod_gcanvas {{/ str}}">
                     <i class="fa fa-image" aria-hidden="true"></i>
