--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -60,6 +60,10 @@
                     <i class="fa fa-image" aria-hidden="true"></i>
                     <div id="image-picker"></div>
                 </div>
+                <div class="item icon" id="undo" title="{{# str}} btn:undo, mod_gcanvas {{/ str}}">
+                    <i class="fa fa-undo" aria-hidden="true"></i>
+                    <div id="emoji-picker"></div>
+                </div>
                 <div class="item icon" id="smiley" title="{{# str}} btn:smiley, mod_gcanvas {{/ str}}">
                     <i class="fa fa-smile-o" aria-hidden="true"></i>
                     <div id="emoji-picker"></div>
