Update code style

--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -19,6 +19,21 @@
     @copyright 9-10-2018 MFreak.nl
     @author    Luuk Verhoeven
 }}
+{{!
+    @template mod_canvas/canvas
+
+    The main canvas html
+
+    Context variables required for this template:
+    * is_teacher - Check if the user is a teacher
+    * helptext - Help text
+
+    Example context (json):
+    {
+        "is_teacher": false,
+        "helptext": "Some text",
+    }
+}}
 <div style="clear:both"></div>
 <div id="sketch-tool-bg">
     <div id="sketch-tool">
