--- a/templates/canvas_emoji.mustache
+++ b/templates/canvas_emoji.mustache
@@ -19,6 +19,19 @@
     @copyright 18-10-2018 MFreak.nl
     @author    Luuk Verhoeven
 }}
+{{!
+    @template mod_canvas/canvas_emoji
+
+    Static emoji holder
+
+    Context variables required for this template:
+    * wwwroot - The path to moodle domain.
+
+    Example context (json):
+    {
+        "wwwroot": "https://moodle.com",
+    }
+}}
 <div>
     <img class="emoji" alt="" src="{{wwwroot}}/mod/gcanvas/pix/emoji/1f600.png"/>
     <img class="emoji" alt="" src="{{wwwroot}}/mod/gcanvas/pix/emoji/1f601.png"/>
