--- a/templates/canvas_uploader.mustache
+++ b/templates/canvas_uploader.mustache
@@ -19,6 +19,21 @@
     @copyright 18-10-2018 MFreak.nl
     @author    Luuk Verhoeven
 }}
+{{!
+    @template mod_canvas/canvas_uploader
+
+    Uploader holder
+
+    Context variables required for this template:
+    * filearea - The file area
+    * form - The html of form
+
+    Example context (json):
+    {
+        "filearea": "shape",
+        "form": "<form></form>",
+    }
+}}
 <div id="canvas-filepicker-form-{{filearea}}" class="dialog">
     {{{form}}}
 </div>
