Update code style

--- a/templates/canvas_attempts.mustache
+++ b/templates/canvas_attempts.mustache
@@ -26,15 +26,15 @@
 
     Context variables required for this template:
     * id - The id of the attempt
-    * src - The path to the image.
-    * added_on - The time the attempt was added.
+    * src - The path to the image
+    * added_on - The time the attempt was added
 
     Example context (json):
     {
         "attempts" : [
             "id" : 1,
             "src" : "https://domain.com/attempt.jpg",
-            "added_on" : "01-11-2018 12:08",
+            "added_on" : "01-11-2018 12:08"
         ]
     }
 }}
