--- a/templates/canvas_emoji.mustache
+++ b/templates/canvas_emoji.mustache
@@ -22,14 +22,14 @@
 {{!
     @template mod_canvas/canvas_emoji
 
-    Static emoji holder
+    Static emoji holder.
 
     Context variables required for this template:
-    * wwwroot - The path to moodle domain.
+    * wwwroot - The path to moodle domain
 
     Example context (json):
     {
-        "wwwroot": "https://moodle.com",
+        "wwwroot": "https://moodle.com"
     }
 }}
 <div>
