--- a/templates/canvas_uploader.mustache
+++ b/templates/canvas_uploader.mustache
@@ -22,7 +22,7 @@
 {{!
     @template mod_canvas/canvas_uploader
 
-    Uploader holder
+    Uploader container.
 
     Context variables required for this template:
     * filearea - The file area
@@ -31,7 +31,7 @@
     Example context (json):
     {
         "filearea": "shape",
-        "form": "<form></form>",
+        "form": "<form></form>"
     }
 }}
 <div id="canvas-filepicker-form-{{filearea}}" class="dialog">
