Update code style

--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -31,7 +31,7 @@
     Example context (json):
     {
         "is_teacher": false,
-        "helptext": "Some text",
+        "helptext": "Some text"
     }
 }}
 <div style="clear:both"></div>
