--- a/templates/canvas_attempts.mustache
+++ b/templates/canvas_attempts.mustache
@@ -31,11 +31,11 @@
 
     Example context (json):
     {
-        "attempts" : [
+        "attempts": [{
             "id" : 1,
             "src" : "https://domain.com/attempt.jpg",
             "added_on" : "01-11-2018 12:08"
-        ]
+        }]
     }
 }}
 <div class="container card-deck mt-4">
