Fix #7 solve loading spectrum M.cfg.wwwroot
Also optimize some code styling

--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -85,7 +85,7 @@
                 <div class="item icon" id="trash" title="{{# str}} btn:trash, mod_gcanvas {{/ str}}">
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                 </div>
-                <div class="item icon" title="{{# str}} btn:trash, mod_gcanvas {{/ str}}">
+                <div class="item icon" title="{{# str}} btn:colorpicker, mod_gcanvas {{/ str}}">
                     <input id="colorpicker" type="hidden"/>
                 </div>
             </div>
