--- a/templates/canvas_attempts.mustache
+++ b/templates/canvas_attempts.mustache
@@ -40,7 +40,7 @@
 }}
 <div class="container card-deck mt-4">
     {{#attempts}}
-        <div class="col-3 mb-4">
+        <div class="col-3 span3 mb-4">
             <div class="card">
                 <div class="h-100">
                     <img class="card-img-top img-fluid" src="{{src}}" alt="{{added_on}}">
