Update #886bwwnb0j - Refactor for Moodle 4.2

--- a/templates/canvas.mustache
+++ b/templates/canvas.mustache
@@ -12,7 +12,7 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+    along with Moodle.  If not, see <http://www.gnu.org/licenses>.
 }}
 {{!
     @package moodle-mod_gcanvas
@@ -34,6 +34,7 @@
         "helptext": "Some text"
     }
 }}
+
 <div style="clear:both"></div>
 <div id="sketch-tool-bg">
     <div id="sketch-tool">
@@ -86,7 +87,7 @@
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                 </div>
                 <div class="item icon" title="{{# str}} btn:colorpicker, mod_gcanvas {{/ str}}">
-                    <input id="colorpicker" type="hidden"/>
+                    <input id="colorpicker" type="hidden">
                 </div>
             </div>
             <div class="p-0">
