--- a/templates/canvas_attempts.mustache
+++ b/templates/canvas_attempts.mustache
@@ -12,7 +12,7 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+    along with Moodle.  If not, see <http://www.gnu.org/licenses>.
 }}
 {{!
     @package moodle-mod_gcanvas
@@ -38,6 +38,7 @@
         }]
     }
 }}
+
 <div class="container card-deck mt-4">
     {{#attempts}}
         <div class="col-3 span3 mb-4">
