--- a/templates/canvas_uploader.mustache
+++ b/templates/canvas_uploader.mustache
@@ -12,7 +12,7 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+    along with Moodle.  If not, see <http://www.gnu.org/licenses>.
 }}
 {{!
     @package moodle-mod_gcanvas
@@ -34,6 +34,7 @@
         "form": "<form></form>"
     }
 }}
+
 <div id="canvas-filepicker-form-{{filearea}}" class="dialog">
     {{{form}}}
 </div>
